# Robot-nav

./: .gitignore  README.md  costmap_analyzer.py  run_autodock.sh  run_navigation.sh  run_patrol.sh  run_rtabmap.sh  使用说明.md
elderbot_ws/: build.sh  find_ascamera_usb.sh  run_autodock.sh  run_navigation.sh  run_patrol.sh  run_rviz.sh  run_slam.sh  ws_comparison.md  使用说明.md  内网通信CA..V1.xlsx
elderbot_ws/src/OrbbecSDK_ROS2/: .gitignore  使用说明.md
elderbot_ws/src/ascamera/: CMakeLists.txt
elderbot_ws/src/ascamera/launch/: hp60c.launch.py
elderbot_ws/src/csb_drive/: package.xml  setup.py
elderbot_ws/src/csb_drive/config/: dyp_e08.yaml
elderbot_ws/src/csb_drive/csb_drive/: drive_pyserial.py
elderbot_ws/src/csb_drive/launch/: drive_pyserial.launch.py
elderbot_ws/src/csb_drive/resource/: csb_drive
elderbot_ws/src/elderbot_base/: CMakeLists.txt
elderbot_ws/src/elderbot_base/config/: ekf.yaml
elderbot_ws/src/elderbot_bringup/: package.xml  setup.cfg  setup.py
elderbot_ws/src/elderbot_bringup/elderbot_bringup/: ascamera_pipeline.py  battery_monitor.py  can_driver.py  depth_scan_filter.py  static_tf.py
elderbot_ws/src/elderbot_bringup/launch/: auto_slam.launch.py  bringup.launch.py  slam.launch.py
elderbot_ws/src/elderbot_description/launch/: description.launch.py
elderbot_ws/src/elderbot_description/urdf/: elderbot_properties.urdf.xacro
elderbot_ws/src/elderbot_navigation/: CMakeLists.txt  package.xml
elderbot_ws/src/elderbot_navigation/config/: explore.yaml  navigation.yaml  patrol_waypoints.yaml
elderbot_ws/src/elderbot_navigation/launch/: navigation.launch.py  slam.launch.py
elderbot_ws/src/elderbot_navigation/rviz/: slam.rviz
elderbot_ws/src/elderbot_navigation/scripts/: auto_dock_node.py  patrol_node.py
elderbot_ws/src/yahboomcar_mediapipe/yahboomcar_mediapipe/: 02_PoseDetector.py  (+1 more)
src/OrbbecSDK_ROS2/: .gitignore
src/csb_drive/: package.xml  setup.cfg  setup.py
src/csb_drive/config/: ultrasonic.yaml
src/csb_drive/csb_drive/: drive.py  drive_pyserial.py
src/csb_drive/launch/: ultrasonic.launch.py
src/elderbot/: CMakeLists.txt  package.xml
src/elderbot_base/: package.xml
src/elderbot_bringup/: package.xml  setup.py
src/elderbot_bringup/elderbot_bringup/: can_driver.py  depth_scan_filter.py  initial_pose_pub.py  laser_filter.py  navigation_test.py  static_tf.py  ultrasonic_memory.py
src/elderbot_bringup/launch/: auto_slam.launch.py  bringup.launch.py  rtabmap.launch.py
src/elderbot_description/: CMakeLists.txt  package.xml
src/elderbot_description/launch/: description.launch.py
src/elderbot_description/rviz/: description.rviz
src/elderbot_description/urdf/: elderbot_properties.urdf.xacro
src/elderbot_navigation/: CMakeLists.txt  package.xml
src/elderbot_navigation/action/: AutoDock.action  AutoDock_README.md  Patrol.action  README.md
src/elderbot_navigation/config/: cartographer_2d.lua  dock_pose.yaml  navigation.yaml  patrol_waypoints.yaml  slam.yaml
src/elderbot_navigation/launch/: navigation.launch.py  slam.launch.py
src/elderbot_navigation/maps/: my_map.yaml
src/elderbot_navigation/rviz/: navigation.rviz
src/elderbot_navigation/scripts/: auto_dock_node.py  patrol_node.py
src/wit_ros2_imu/: package.xml
src/wit_ros2_imu/launch/: rviz_and_imu.launch.py
src/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
src/yahboomcar_KCFTracker/: CMakeLists.txt  package.xml
src/yahboomcar_astra/yahboomcar_astra/: colorHSV.text
src/yahboomcar_mediapipe/yahboomcar_mediapipe/: 01_HandDetector.py  03_Holistic.py  04_FaceMesh.py  05_FaceEyeDetection.py  06_FaceLandmarks.py  07_FaceDetection.py  08_Objectron.py  10_HandCtrl.py  11_GestureRecognition.py
(+13 files in other folders)
