<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elderbot</name>
  <version>0.1.0</version>
  <description>ElderBot Robot ROS2 Meta Package</description>
  <maintainer email="elderbot@todo.todo">elderbot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>elderbot_base</exec_depend>
  <exec_depend>elderbot_bringup</exec_depend>
  <exec_depend>elderbot_description</exec_depend>
  <exec_depend>elderbot_navigation</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
