<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elderbot_bringup</name>
  <version>0.1.0</version>
  <description>ElderBot Bringup - hardware drivers and launch files</description>
  <maintainer email="elderbot@todo.todo">elderbot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_localization</depend>
  <depend>nav2_bringup</depend>
  <depend>rplidar_ros</depend>
  <depend>elderbot_description</depend>
  <depend>elderbot_base</depend>
  <depend>elderbot_navigation</depend>
  <exec_depend>ascamera</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>wit_ros2_imu</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
